...
    Surface(
        modifier = Modifier
            .clickable(
                onClick = { onSelectCard(consent) }
            )
            .semantics { testTagsAsResourceId = true }
            .testTag("saved-consent"),
    ) {
        Row(
            verticalAlignment = Alignment.CenterVertically,
            modifier = Modifier
                .background(
                    shape = RoundedCornerShape(8.dp),
...
