...

        }
    }

    override fun getButtonList(): List<ButtonItem> {
        val allButtons = listOf(
            ButtonItem(LAUNCH_PAYMENT_LIST, "Launch payment list"),
            ButtonItem(LAUNCH_CUSTOM_PAYMENT_LIST, "Launch custom payment list"),
            ButtonItem(LAUNCH_CARD_PAYMENT, "Launch card payment"),
            ButtonItem(LAUNCH_CARD_PAYMENT_DIALOG, "Launch card payment (dialog)"),
            ButtonItem(LAUNCH_EMBEDDED_ELEMENT, "Embedded element"),
            ButtonItem(LAUNCH_EMBEDDED_ELEMENT_INLINE_GPAY, "Embedded element (inline Google Pay)"),
            ButtonItem(LAUNCH_EMBEDDED_ELEMENT_CARD_ONLY, "Embedded element (card only)"),
...
